# Ginnungagap

./: .gitignore  CMakeLists.txt  README.md
src/CLI/: CMakeLists.txt
src/CLI/GinnungagapCLI/: main.cpp
src/CLI/GinnungagapCLI/CSVUnpack/: CSVFile.hpp  MXEInfo.cpp  MXEInfo.hpp  MXEUtil.cpp  MXEUtil.hpp  Pack.cpp  Pack.hpp  Unpack.cpp  Unpack.hpp
src/Core/: CMakeLists.txt
src/Core/GinnungagapCore/structs/JSON/: load.cpp  load.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Database/MXEN/: BinaryVC4.hpp  InterfaceVC4.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Database/MXEN/MXEC/: BinaryVC4.hpp  StringBank.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Database/MXEN/MXEC/AssetsTable/: AssetsTable.hpp  TOC.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Database/MXEN/MXEC/EntityTable/: EntityTable.hpp  TOC.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Database/MXEN/MXEC/ParametersTable/: Parameter.hpp  ParameterSet.hpp  ParameterSetMetadata.hpp  ParametersTable.hpp  TOC.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Metadata/CCRS/: BinaryVC4.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Metadata/ENRS/: BinaryVC4.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Metadata/EOFC/: BinaryVC4.hpp
src/Core/GinnungagapCore/structs/Valkyria/Containers/Metadata/POF1/: BinaryVC4.hpp
src/Core/GinnungagapCore/structs/Valkyria/Filetypes/MXE/: BinaryVC4.hpp
src/Core/GinnungagapCore/structs/Valkyria/serialization/: CanvasDescriptors.hpp  CanvasParsers.hpp
src/Core/GinnungagapCore/structs/Valkyria/serialization/Structs/: Container.hpp  ContainerHeader.hpp  HeaderFlags.cpp  HeaderFlags.hpp
src/Core/GinnungagapCore/structs/Valkyria/serialization/Utils/: Offset.cpp  Offset.hpp
src/Core/GinnungagapCore/utils/: Paths.cpp  Paths.hpp  StringUtils.cpp  StringUtils.hpp
(+174 files in other folders)
